--- a/src/components/common/CommentElement/CommentElement.module.css
+++ b/src/components/common/CommentElement/CommentElement.module.css
@@ -1,17 +1,36 @@
 .commentElementWrapper {
     display: flex;
     margin: 20px;
+    word-wrap:break-word;
 }
 
 .commentElementWrapper > div > div > p {
     display: inline-block;
-    margin: 0 10% 0 0;
+    margin: 0;
+}
+
+.commentElementWrapper > div > p {
+    word-wrap:break-word;
+    color: rgba(42, 46, 46, 0.75);
+}
+
+.commentElementWrapper > div > div {
+    display: flex;
+    justify-content: space-between;
+}
+
+.commentElementWrapper > div {
+    width: 100%;
 }
 
 @media only screen and (max-height: 110vw) and (max-width: 1300px) {
     .commentElementWrapper {
         width: 50vw;
         font-size: 1.2vw;
+    }
+
+    .commentElementWrapper > div > p{
+        width: 42vw;
     }
 }
 
@@ -20,6 +39,10 @@
         width: 43vw;
         font-size: 1vw;
     }
+
+    .commentElementWrapper > div > p{
+        width: 36vw;
+    }
 }
 
 @media only screen and (max-height: 110vw) and (min-width: 1600px) {
@@ -27,12 +50,20 @@
         width: 35vw;
         font-size: .8vw;
     }
+
+    .commentElementWrapper > div > p{
+        width: 30vw;
+    }
 }
 
 @media only screen and (min-height: 110vw) {
     .commentElementWrapper {
         width: 70vw;
         font-size: 3vw;
+    }
+
+    .commentElementWrapper > div > p{
+        width: 55vw;
     }
 
     .commentElementWrapper > div > div > p {
